<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/subscription"
        android:icon="@drawable/tabbar_subscription_selector"
        android:title="@string/subscription" />
    <item
        android:id="@+id/discovery"
        android:icon="@drawable/tabbar_discovery_selector"
        android:title="@string/discovery" />
    <item
        android:id="@+id/publish"
        android:icon="@drawable/tabbar_write_icon"
        android:title="@string/publish" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/tabbar_notification_selector"
        android:title="@string/notification" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/tabbar_profile_selector"
        android:title="@string/profile" />
</menu>